[gd_scene load_steps=24 format=3 uid="uid://ybufpojdxqmr"]

[ext_resource type="Script" uid="uid://mpgha2056lj1" path="res://scripts/d_well.gd" id="1_jfh74"]
[ext_resource type="Texture2D" uid="uid://bdao7dkjorw1g" path="res://Assets/well.svg" id="2_2csfv"]

[sub_resource type="LabelSettings" id="LabelSettings_2csfv"]
font_size = 171

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_g8qap"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_umqak"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_321qv"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yr6jo"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_06we1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wwte5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_c0x8e"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ypkok"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1ko20"]
bg_color = Color(1, 1, 1, 0.077)
draw_center = false

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_po4iq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jfh74"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2csfv"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1ko20"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_67y5h"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_36wl7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_itvvg"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_60uhd"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_q3fw5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3yjn4"]
bg_color = Color(1, 1, 1, 0.144)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_161ro"]

[node name="dWell" type="Node2D"]
script = ExtResource("1_jfh74")

[node name="Label" type="Label" parent="."]
offset_top = 64.0
offset_right = 1152.0
offset_bottom = 320.0
text = "dWell"
label_settings = SubResource("LabelSettings_2csfv")
horizontal_alignment = 1
vertical_alignment = 1

[node name="play" type="Button" parent="."]
offset_left = 384.0
offset_top = 352.0
offset_right = 768.0
offset_bottom = 448.0
theme_override_font_sizes/font_size = 51
theme_override_styles/focus = SubResource("StyleBoxEmpty_g8qap")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_umqak")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_321qv")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_yr6jo")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_06we1")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_wwte5")
theme_override_styles/hover = SubResource("StyleBoxEmpty_c0x8e")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_ypkok")
theme_override_styles/pressed = SubResource("StyleBoxFlat_1ko20")
theme_override_styles/normal = SubResource("StyleBoxEmpty_po4iq")
text = "play"

[node name="settings" type="Button" parent="."]
offset_top = 512.0
offset_right = 256.0
offset_bottom = 640.0
theme_override_font_sizes/font_size = 31
theme_override_styles/focus = SubResource("StyleBoxEmpty_g8qap")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_umqak")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_321qv")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_yr6jo")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_06we1")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_wwte5")
theme_override_styles/hover = SubResource("StyleBoxEmpty_c0x8e")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_ypkok")
theme_override_styles/pressed = SubResource("StyleBoxFlat_1ko20")
theme_override_styles/normal = SubResource("StyleBoxEmpty_po4iq")
text = "tutorial"

[node name="credits" type="Button" parent="."]
offset_left = 896.0
offset_top = 512.0
offset_right = 1152.0
offset_bottom = 640.0
theme_override_font_sizes/font_size = 31
theme_override_styles/focus = SubResource("StyleBoxEmpty_g8qap")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_umqak")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_321qv")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_yr6jo")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_06we1")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_wwte5")
theme_override_styles/hover = SubResource("StyleBoxEmpty_c0x8e")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_ypkok")
theme_override_styles/pressed = SubResource("StyleBoxFlat_1ko20")
theme_override_styles/normal = SubResource("StyleBoxEmpty_po4iq")
text = "credits"

[node name="settings_popup" type="ColorRect" parent="."]
visible = false
offset_right = 1152.0
offset_bottom = 672.0
color = Color(0, 0, 0, 0.906)

[node name="RichTextLabel" type="RichTextLabel" parent="settings_popup"]
layout_mode = 0
offset_left = 64.0
offset_right = 1088.0
offset_bottom = 640.0
bbcode_enabled = true
text = "[i]oh no, someone has dropped a coin in the well, but its not reaching the water at the bottom...[/i]
Help the coin get to the grey water at the bottom by dragging blocks into the marked area and rotating them using R. If you want to test your setup press SPACE. If you want to go back, press ESCAPE or TAB. And who knows, maybe these stars can give the coin-thrower some extra luck..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="settings_popup"]
layout_mode = 0
offset_left = 512.0
offset_top = 384.0
offset_right = 640.0
offset_bottom = 416.0
theme_override_font_sizes/font_size = 11
theme_override_styles/focus = SubResource("StyleBoxEmpty_jfh74")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_2csfv")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_1ko20")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_67y5h")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_36wl7")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_itvvg")
theme_override_styles/hover = SubResource("StyleBoxEmpty_60uhd")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_q3fw5")
theme_override_styles/pressed = SubResource("StyleBoxFlat_3yjn4")
theme_override_styles/normal = SubResource("StyleBoxEmpty_161ro")
text = "back"

[node name="credits_popup" type="ColorRect" parent="."]
visible = false
offset_right = 1152.0
offset_bottom = 672.0
color = Color(0, 0, 0, 0.906)

[node name="RichTextLabel" type="RichTextLabel" parent="credits_popup"]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 640.0
bbcode_enabled = true
text = "https://godotengine.org/license/
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="credits_popup"]
layout_mode = 0
offset_left = 512.0
offset_top = 352.0
offset_right = 640.0
offset_bottom = 384.0
theme_override_font_sizes/font_size = 11
theme_override_styles/focus = SubResource("StyleBoxEmpty_jfh74")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_2csfv")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_1ko20")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_67y5h")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_36wl7")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_itvvg")
theme_override_styles/hover = SubResource("StyleBoxEmpty_60uhd")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_q3fw5")
theme_override_styles/pressed = SubResource("StyleBoxFlat_3yjn4")
theme_override_styles/normal = SubResource("StyleBoxEmpty_161ro")
text = "back"

[node name="Well" type="Sprite2D" parent="."]
self_modulate = Color(1, 1, 1, 0.265)
z_index = -3
position = Vector2(576, 392)
texture = ExtResource("2_2csfv")

[connection signal="pressed" from="play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="settings_popup/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="credits_popup/Button" to="." method="_on_button2_pressed"]
